--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,8 @@ img {
   margin-top: 3rem;
   display: grid;
   grid-gap: 1rem;
+  align-items: center;
+  text-align: center;
   grid-template-columns: repeat(4, 1fr); }
   #home-a .specials .fas {
     color: steelblue;
@@ -397,22 +399,21 @@ img {
   #courses-a .classes-info .class-info1 {
     grid-area: class1;
     border-left: 3px solid steelblue;
-    grid-template-rows: 2fr 1fr;
-    padding: 0.5rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center; }
   #courses-a .classes-info .class-info2 {
     grid-area: class2;
     border-right: 3px solid steelblue;
-    padding: 0.5rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center; }
   #courses-a .classes-info .class-info3 {
     grid-area: class3;
     border-left: 3px solid steelblue;
-    padding: 0.5rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center; }
@@ -597,7 +598,10 @@ img {
     flex-direction: column;
     align-items: center; }
     #courses-a .classes-info img {
-      margin: 0.5rem 0; }
+      margin: 0.5rem 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
     #courses-a .classes-info .class-info1 {
       margin-bottom: 0.5rem; }
   #contact-a .text-fields {
